Fixed questionaire buttons on narrow screen. They arrange vertically.

--- a/css/index.css
+++ b/css/index.css
@@ -1477,7 +1477,7 @@
       .questionnaire-buttons {
         display: flex;
         gap: 10px;
-        margin-top: 20px;
+        align-items: center;
       }
 
       .save-button,
@@ -1884,6 +1884,21 @@
 
         .custom-file-input label {
           text-align: center;
+        }
+
+        .year-selector-container {
+          flex-direction: column;
+          align-items: stretch;
+        }
+
+        .questionnaire-buttons {
+          flex-direction: column;
+          width: 100%;
+        }
+
+        .questionnaire-buttons button {
+          width: 100%;
+          margin: 5px 0;
         }
       }
 
